...
                android:layout_marginLeft="10dp"
                android:textAlignment="center" />
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_action_save_24dp"
                android:id="@+id/editor_toolbar_save"
                android:background="@color/colorPrimary"
                android:layout_marginEnd="20dp"
                android:tint="@color/mdtp_white"
               />
        </LinearLayout>

...
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <EditText
                android:id="@+id/editor_et_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/layout_hint_eventName" />
            <View
                android:background="@drawable/divider_horizontal"
...
                android:layout_height="2dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textAutoCorrect|textMultiLine"
                android:id="@+id/editor_description"
                android:layout_marginTop="10dp"
                android:hint="@string/layout_editor_descriptionhint"
                android:elegantTextHeight="true" />
            <View
                android:background="@drawable/divider_horizontal"
                android:layout_width="match_parent"
...
                android:layout_height="40dp"
                android:layout_marginTop="10dp">

                <Button
                    android:drawableLeft="@drawable/ic_event_date_24dp"
                    android:drawablePadding="20dp"
                    android:id="@+id/editor_btn_pickdate"
                    android:text="@string/defaultDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog" />

                <Button
                    android:id="@+id/editor_btn_picktime"
                    android:text="@string/defaultTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:id="@+id/layout_enddate"
                android:layout_height="40dp">

                <Button
                    android:drawableLeft="@drawable/ic_event_date_reverse_24dp"
                    android:drawablePadding="20dp"
                    android:id="@+id/editor_btn_pickdate_fin"
                    android:text="@string/defaultDate2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"/>

                <Button
                    android:id="@+id/editor_btn_picktime_fin"
                    android:text="@string/defaultTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"/>
            </LinearLayout>
            <View
...
                android:layout_height="40dp"
                android:layout_marginTop="5dp">
                <Button
                    android:text="@string/category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/editor_btn_category"
                    android:layout_weight="1.00"
                    android:drawableLeft="?android:attr/actionModePasteDrawable" />

                <Button
                    android:drawableLeft="@drawable/ic_priority_24dp"
                    android:text="@string/editor_btn_priority"
                    android:layout_height="wrap_content"
                    android:id="@+id/editor_btn_priority"
                    android:layout_weight="1"
                    android:layout_width="wrap_content" />

            </LinearLayout>
...
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp">

                <Button
                    android:drawableLeft="@drawable/ic_notification_24dp"
                    android:id="@+id/editor_btn_picknotifydelay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/editor_btn_picknotifydelay" />

                <Button
...
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/editor_notecontainer">
            </LinearLayout>

            <View
                android:background="@drawable/divider_horizontal"
                android:layout_width="match_parent"
                android:layout_height="2dp"/>
...
                    android:layout_height="match_parent"
                    android:id="@+id/editor_tags" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/editor_btn_tags_delete"
                    android:layout_weight="1"
                    android:background="@drawable/ic_delete_black_24dp"
                    android:elevation="0dp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/editor_btn_tags_add"
                    android:background="@drawable/ic_add_circle_black_24dp"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
...

                <Button
                    android:drawableLeft="@drawable/ic_node_add_black_24dp"
                    android:text="@string/layout_button_addNote"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editor_btn_addnote"
                    android:layout_marginTop="10dp" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>
...
